# mcp_m365_personal_assistant

./: .gitignore  CLAUDE_SETUP.md  Makefile  README.md  TOOLING_V2_CONTRACT.md  main.py  pyproject.toml
modules/: __init__.py  cache.py  enums.py  errors.py  graph_client.py  logging_utils.py  models.py  personal_assistant.py
modules/tools/: __init__.py  calendar_tools.py  context_tools.py  files_tools.py  mail_tools.py  operability_tools.py  teams_tools.py  todo_tools.py
tests/: test_calendar_phase2.py  test_files_phase3.py  test_mail_phase1.py  test_onenote_phase6.py  test_phase7_phase8.py  test_smoke.py  test_teams_phase4.py  test_todo_phase5.py  test_validation_collab_context.py  test_validation_todo_files.py
